--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "editor.formatOnSave": true
+  "workbench.iconTheme": "vscode-icons",
+  "typescript.check.tscVersion": false,
+  "vsicons.projectDetection.disableDetect": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "eslint.autoFixOnSave": true,
+  "tslint.autoFixOnSave": true
 }
